# tqm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
resources/: resources.qrc
scripts/: bump_version.py  compile_resources.py
tests/: conftest.py
tests/core/: test_builder.py  test_logger.py  test_queue.py  test_runner.py  test_settings.py
tests/features/task_dependencies/: test_parent_child.py  test_predicates.py
tests/features/task_groups/: test_tasks_group.py
tests/features/task_management/: test_add_event.py  test_add_task.py  test_remove_task.py  test_retry_task.py
tests/ui/: test_progress_bar.py  test_ui_controller.py  test_ui_view_model.py
tests/utils/: __init__.py  assertions.py  failure_controller.py  safe_list.py
tqm/: __init__.py  _main.py  exceptions.py  typings.py  version.py
tqm/_core/: __init__.py  logger.py  queue.py  settings.py  shutdown.py  task.py  task_actions.py  task_base.py  task_builder.py  task_callbacks.py  task_executor.py  task_options.py  task_predicate.py  task_retry.py  task_runner.py  task_state.py  threadpool_interface.py
tqm/_core/retry_policy/: __init__.py  delay_strategy.py  factory_methods.py  retry_policy.py
tqm/_ui/: context_menu.py  debug_widget.py  font_loader.py  progress_bar_delegate.py  tab_logs.py  task_item.py  toolbar.py  ui_controller.py  ui_view_model.py
tqm/_ui/mixins/: multi_select_mixin.py  view_mixin.py
tqm/config/: style.qss
tqm/demo/: __init__.py  demo.py
tqm/theme/: style.qss
tqm/utils/: __init__.py  extract_fn_name.py  open_file.py  random_color.py  thread_info.py
tqm/widgets/: __init__.py  frame.py  help_widget.py  tool_button.py
